added 75k samples from holllywood set

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 code/dense_trajectory_release_v1.2/.build_release/
 code/dense_trajectory_release_v1.2/release/
-code/dense_trajectory_release_v1.2/ml/codebook/
+#code/dense_trajectory_release_v1.2/ml/codebook/
