tidied up multichannel SVR code

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-code/dense_trajectory_release_v1.2/.build_release/**/*
-code/dense_trajectory_release_v1.2/release/**/*
+code/dense_trajectory_release_v1.2/.build_release
+code/dense_trajectory_release_v1.2/release
+code/ml_pl/dataset
+
+#exclude large data files
 *samples.pkl
 *.mp4
